# CReddit

./: .gitignore
back/: .env  README.md  pyproject.toml
back/app/: config.py  main.py
back/app/api/: __init__.py  auth.py  posts.py  subreddits.py  users.py
back/app/core/: auth.py  database.py  security.py
back/app/models/: schemas.py
back/app/repository/: base.py  example_usage.py  post_repository.py  subreddit_repository.py  user_repository.py
front/: package-lock.json
front/app/: page.tsx
front/app/post/[id]/: comments.tsx  page.tsx  post-content.tsx
front/lib/: data.ts  types.ts  utils.ts
